feat: make editions section

--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -59,3 +59,13 @@ ul, li {
     align-items: center;
     justify-content: center;
 }
+
+h2 {
+    font-weight: 600;
+    font-size: 40px;
+    line-height: 47px;
+    color: $white;
+    text-align: center;
+    opacity: 1;
+    transition: opacity .5s;
+}
