--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,4 +1,5 @@
 @import './colors.scss';
+@import '../styles/mixins.scss';
 
 .section {
     &-main {
@@ -6,7 +7,7 @@
         position: relative;
         max-width: 1920px;
         margin: 0 auto;
-        min-height: 70vh;
+        min-height: 700px;
 
         &:after, &:before {
             height: 764px;
@@ -72,7 +73,7 @@
 
         &__list {
             margin-left: 50px;
-            // z-index: -1;
+            z-index: -1;
 
             ul {
                 column-gap: 24px;
@@ -81,7 +82,7 @@
                 line-height: 27px;
                 text-transform: uppercase;
                 transform: translateX(-200px);
-                // opacity: 0;
+                opacity: 0;
             }
         }
 
@@ -106,11 +107,12 @@
                 }
 
                 svg {
+                    position: absolute;
                     width: 12px;
                     height: 12px;
                     fill: $white;
                     transform: rotate(0deg);
-                    margin-right: 9px;
+                    margin-left: 9px;
                 }
             }
         }
@@ -135,5 +137,182 @@
                 color: $violet;
             }
         }
+    }
+
+    &.opened {
+        .header {
+            &-menu {
+                &__button {
+                    span {
+                        width: 12px;
+
+                        &::after {
+                            width: 25px;
+                        }
+
+                        &::before {
+                            width: 12px;
+                        }
+                    }
+                }
+
+                &__list {
+                    z-index: 1;
+
+                    ul {
+                        opacity: 1;
+                        transform: translate(0);
+                        transition: opacity .2s, transform .25s;
+                    }
+                }
+            }
+        }
+    }
+
+    &-timer {
+        margin-left: auto;
+        column-gap: 20px;
+
+        span {
+            font-weight: 400;
+            line-height: 19px;
+            color: $grey;
+        }
+
+        &__values {
+            column-gap: 10px;
+        }
+
+        &__item {
+            color: $sea;
+
+            &-value {
+                font-weight: 700;
+                font-size: 40px;
+                line-height: 47px;
+                min-width: 55px;
+                text-align: center;
+            }
+
+            &-info {
+                text-align: center;
+                font-weight: 400;
+            }
+        }
+    }
+}
+
+.description {
+    margin-top: 7%;
+    max-width: 540px;
+    animation: move .75s ease-in-out;
+
+    &-title {
+        h1 {
+            font-weight: 600;
+            font-size: 100px;
+            line-height: 100px;
+        }
+    }
+
+    &-subtitle {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 27px;
+        color: $sea;
+        margin-top: 26px;
+    }
+
+    &-button {
+        @include button;
+        @include hoverViolet;
+        margin-top: 50px;
+    }
+}
+
+.editions {
+    margin: 100px 0 50px;
+
+    &-list {
+        margin-top: 32px;
+        display: grid;
+        grid-template-columns: repeat(3, 350px);
+        column-gap: 16px;
+        justify-content: center;
+    }
+
+    &-item {
+        background: linear-gradient(180deg, #141615 0%, #1C2023 100%);
+        border-radius: 6px;
+        padding: 17px;
+        transition: transform .25s ease-in-out;
+        transform: translateX(0);
+
+        &__img {
+            border-radius: 6px;
+            overflow: hidden;
+            width: 100%;
+            height: 172px;
+
+            @include bg;
+        }
+
+        &__title {
+            margin-top: 20px;
+            font-weight: 700;
+            line-height: 19px;
+            text-align: center;
+        }
+
+        &__subtitle {
+            color: $sea;
+            line-height: 19px;
+            font-weight: 500;
+            text-align: center;
+            margin: 10px 0 32px;
+        }
+
+        &__description {
+            color: $grey;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 17px;
+            display: flex;
+            flex-direction: column;
+            row-gap: 12px;
+        }
+
+        &__price {
+            font-weight: 700;
+            font-size: 19px;
+            line-height: 32px;
+            color: $white;
+            margin: 6px 0 14px;
+            text-align: right;
+        }
+
+        &__btn {
+            @include button;
+            @include hoverViolet;
+            padding: 8px 18px;
+            font-size: 13px;
+            line-height: 15px;
+            margin-left: auto;
+        }
+    }
+
+  
+}
+
+
+@keyframes move {
+    0% {
+        opacity: 0;
+        transform:  translateX(-400px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
     }
 }
