--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -28,6 +28,10 @@
             background: url(../images/bg.png);
         }
     }
+
+    &-dual {
+        margin-top: 100px;
+    }
 }
 
 .header {
@@ -300,10 +304,71 @@
             margin-left: auto;
         }
     }
-
-  
 }
 
+.dual {
+    column-gap: 5%;
+    margin-top: 20px;
+    transition: column-gap .5s;
+
+    &-description {
+        max-width: 410px;
+
+        p {
+            color: $sea;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 27px;
+            margin-bottom: 22px;
+
+            span {
+                font-weight: 700;
+            }
+        }
+
+        &__info {
+            margin-top: 10px;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        &__price {
+            font-weight: 700;
+            font-size: 30px;
+            line-height: 36px;
+        }
+
+        &__button {
+            @include button($orange);
+            @include hoverOrange;
+            padding: 14px 19px;
+            font-weight: 500;
+        }
+    }
+
+    &-img {
+        max-width: 50%;
+        position: relative;
+
+        img {
+            max-width: fit-content;
+            animation: gravitation 1.5s linear infinite alternate;
+        }
+
+        &::before {
+            content: '';
+            display: block;
+            width: 194px;
+            height: 119px;
+            background: rgba(79, 96, 152, 0.8);
+            filter: blur(75px);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+}
 
 @keyframes move {
     0% {
@@ -314,5 +379,15 @@
     100% {
         opacity: 1;
         transform: translateX(0px);
+    }
+}
+
+@keyframes gravitation {
+    0% {
+        transform:  translateY(-15px);
+    }
+
+    100% {
+        transform: translateY(0px);
     }
 }
