--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -29,15 +29,11 @@
         }
     }
 
-    &-dual {
-        margin-top: 100px;
-    }
-
-    &-about {
-        margin-top: 100px;
-    }
-
-    &-explore {
+    &-dual,
+    &-about,
+    &-explore,
+    &-news,
+    &-faq {
         margin-top: 100px;
     }
 }
@@ -592,6 +588,155 @@
         @include button($orange);
         @include hoverOrange;
         margin-top: 28px;
+    }
+}
+
+.news {
+    margin-top: 32px;
+    transition: transform .5s;
+    transform: translate(0);
+
+    &-item {
+        background: linear-gradient(177.87deg, #30373F 41.63%, #141615 185.57%);
+        border-radius: 6px;
+        padding: 20px;
+
+        &__info {
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        &__subtitle {
+            font-weight: 600;
+            font-size: 10px;
+            line-height: 12px;
+            text-transform: uppercase;
+            color: $violet;
+        }
+
+        &__date {
+            font-weight: 400;
+            font-size: 10px;
+            line-height: 17px;
+            color: $grey;
+        }
+
+        &__title {
+            font-weight: 600;
+            font-size: 19px;
+            line-height: 23px;
+            text-transform: uppercase;
+            color: $white;
+            margin: 7px 0 16px 0;
+        }
+
+        &__description {
+            column-gap: 24px;
+            height: 284px;
+            align-items: flex-start;
+        }
+
+        &__img {
+            min-width: 278px;
+            height: 100%;
+            @include bg;
+
+        }
+
+        &__text {
+            flex-direction: column;
+            height: 100%;
+
+            p {
+                color: #d9d9d9;
+                font-weight: 400;
+                font-size: 12px;
+                line-height: 17px;
+            }
+        }
+
+        &__button {
+            background: $grey;
+            border-radius: 6px;
+            font-weight: 500;
+            font-size: 13px;
+            line-height: 15px;
+            text-transform: uppercase;
+            color: $white;
+            margin-top: 10px;
+            padding: 8px 30px;
+            display: flex;
+            margin-left: auto;
+            margin-top: auto;
+            width: max-content;
+            transition: background .25s;
+
+            &:hover {
+                background: $dark;
+            }
+        }
+    }
+}
+
+.faq {
+    &-items {
+        flex-direction: column;
+        row-gap: 32px;
+    }
+
+    &-item {
+        transition: transform .4s;
+        transform: translate(0);
+
+        &__header {
+            width: 100%;
+            justify-content: space-between;
+            font-weight: 600;
+            font-size: 17px;
+            line-height: 20px;
+            color: $white;
+            cursor: pointer;
+            border-bottom: 2px solid $violet;
+            padding-bottom: 8px;
+
+            span {
+                background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), #8C96A0;
+                border-radius: 6px;
+                width: 30px;
+                height: 30px;
+
+                &::before {
+                    font-size: 25px;
+                    content: "+";
+                    transition: transform .25s;
+                }
+            }
+        }
+
+        &__content {
+            // height: 0;
+            // opacity: 0;
+            transition: height .25s opacity .25s;
+
+            p {
+                padding-top: 13px;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 17px;
+
+                span {
+                    color: #ff4136;
+                }
+            }
+
+            &.opened {
+                span {
+                    &::before {
+                        transform: rotate(45deg);
+                    }
+                }
+            }
+        }
     }
 }
 
