--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -714,8 +714,8 @@
         }
 
         &__content {
-            // height: 0;
-            // opacity: 0;
+            height: 0;
+            opacity: 0;
             transition: height .25s opacity .25s;
 
             p {
@@ -728,14 +728,165 @@
                     color: #ff4136;
                 }
             }
+        }
 
-            &.opened {
-                span {
-                    &::before {
-                        transform: rotate(45deg);
-                    }
+        &.opened {
+            span {
+                &::before {
+                    transform: rotate(45deg);
                 }
             }
+    
+            .faq-item__content {
+                opacity: 1;
+            }
+        }
+    }
+}
+
+.footer {
+    margin-top: 150px;
+    position: relative;
+    padding-bottom: 20px;
+
+    &::before {
+        content: '';
+        display: block;
+        width: 786px;
+        height: 439px;
+        position: absolute;
+        top: 0;
+        right: 20%;
+        z-index: -1;
+        background: url(../images/footer.png) no-repeat center/cover;
+    }
+
+    &-top {
+        justify-content: space-between;
+    }
+
+    &-menu {
+        column-gap: 22px;
+        font-weight: 400;
+        line-height: 27px;
+        text-transform: uppercase;
+        transition: color .25s ease;
+
+        a {
+            color: rgba(255, 255, 255, 0.5);
+
+            &:hover {
+                color: $violet;
+            }
+        }
+    }
+
+    &-lang {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 27px;
+        cursor: pointer;
+
+        span {
+            text-transform: uppercase;
+            color: $grey;
+            margin-right: 5px;
+        }
+
+        &__current {
+            color: $white;
+            text-transform: uppercase;
+        }
+
+        &__list {
+            position: relative;
+
+            &:hover {
+                .footer-lang__content {
+                    visibility: visible;
+                }
+            }
+        }
+
+        &__content {
+            background: $dark;
+            border-radius: 6px;
+            padding: 10px;
+            position: absolute;
+            visibility: hidden;
+
+            &-item {
+                text-transform: uppercase;
+                font-weight: 500;
+                cursor: pointer;
+                transition: color .25s ease;
+
+                &:hover {
+                    color: $violet;
+                }
+            }
+        }
+    }
+
+    &-info {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: center;
+        color: $grey;
+        margin: 50px auto 38px auto;
+        max-width: 700px;
+    }
+
+    &-icon {
+        text-align: center;
+    }
+
+    &-year {
+        margin: 20px auto 13px auto;
+    }
+
+    &-year,
+    &-rights {
+        font-weight: 400;
+        line-height: 19px;
+        color: $grey;
+        text-align: center;
+
+        a {
+            color: $violet;
+            text-decoration: underline;
+        }
+    }
+}
+
+.swiper {
+    &-button {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 32px;
+        height: 32px;
+        background: #8c96a0;
+        border-radius: 6px;
+        z-index: 9;
+        cursor: pointer;
+        transition: background .25s;
+
+        &:hover {
+            background: $violet;
+        }
+
+        svg {
+            fill: #fff;
+        }
+
+        &-prev {
+            left: 10%;
+        }
+
+        &-next {
+            right: 10%;
         }
     }
 }
