feat: make logic menu header and timer

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -89,7 +89,7 @@
                 font-weight: 400;
                 line-height: 27px;
                 text-transform: uppercase;
-                transform: translateX(-200px);
+                transform: translateX(-90px);
                 opacity: 0;
             }
         }
@@ -184,7 +184,7 @@
         span {
             font-weight: 400;
             line-height: 19px;
-            color: $grey;
+            color: #dddddd;
         }
 
         &__values {
